WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
140105
Stop including PluginView.h from cross platform WebCore code
https://bugs.webkit.org/show_bug.cgi?id=140105
Summary
Stop including PluginView.h from cross platform WebCore code
Anders Carlsson
Reported
2015-01-05 16:57:45 PST
Stop including PluginView.h from cross platform WebCore code
Attachments
Patch
(6.25 KB, patch)
2015-01-05 16:58 PST
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(6.61 KB, patch)
2015-01-05 17:12 PST
,
Anders Carlsson
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2015-01-05 16:58:48 PST
Created
attachment 244017
[details]
Patch
WebKit Commit Bot
Comment 2
2015-01-05 17:00:41 PST
Attachment 244017
[details]
did not pass style-queue: ERROR: Source/WebCore/bridge/NP_jsobject.cpp:254: _NPN_Evaluate is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2015-01-05 17:12:02 PST
Created
attachment 244018
[details]
Patch
WebKit Commit Bot
Comment 4
2015-01-05 17:14:42 PST
Attachment 244018
[details]
did not pass style-queue: ERROR: Source/WebCore/bridge/NP_jsobject.cpp:254: _NPN_Evaluate is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 5
2015-01-05 17:23:41 PST
Committed
r177941
: <
http://trac.webkit.org/changeset/177941
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug